# AURA

./: .gitignore  ADVERSARIAL_REVIEW.html  README.html  README.md  generate_html.py
aura-frontend/: index.html  package-lock.json  package.json  sbom-frontend.json  tailwind.config.js  vite.config.js
aura-frontend/coverage/: App.jsx.html  clover.xml  coverage-final.json  index.html
aura-frontend/src/: App.jsx  App.test.jsx  index.css
backend/: .coverage  .gitignore  aura_agent.py  chat_agent.py  main.py  pyproject.toml  pytest.ini  requirements.txt  sbom-backend.json
backend/tests/: test_integration.py  test_main.py
